--- a/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
+++ b/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
@@ -66,7 +66,7 @@
 
 .conteudo h1 {
   font-family: League-Spartan;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: bold;
   color: #1D314D;
   text-align: center;
@@ -77,7 +77,7 @@
 .main_conteudo .container {
   width: 60%;
   height: 25%;
-  margin: 5% 0 0 20%;
+  margin: 1% 0 0 20%;
   justify-content: center;
 }
 
@@ -85,13 +85,13 @@
   width: 80%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .dataBox {
-  width: 25%;
-  height: 90%;
+  width: 30%;
+  height: 95%;
   border: 2px solid #000;
   border-radius: 10px;
 }
@@ -115,7 +115,7 @@
 }
 
 .data {
-  margin-top: 20%;
+  margin-top: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -160,12 +160,12 @@
 
 /*---------------------------------------- Legenda ----------------------------------------*/
 .legenda {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 5% 0% 0% 30%;
-  width: 30%;
-  height: 20%;
+  justify-content: space-evenly;
+  margin: 3.5% 0% 0% 23.5%;
+  width: 35%;
+  height: 30%;
   border: 2px solid #1D314D;
   border-radius: 10px;
 }
@@ -223,7 +223,7 @@
   height: 40px;
   width: 130px;
   font-size: 17px;
-  margin: 0 0 0 72%;
+  margin: 0 0 0 68%;
 }
 
 .ver_mais a {
@@ -240,19 +240,15 @@
 #select_estacao {
   width: 10%;
   height: 5%;
-  margin: 1% 0 0 1.5%;
+  margin: 0 0 0 1.5%;
 }
 
 .heatmap {  
-  height: 490px;
-  width: 850px;
+  width: 600px;
+  height: 346px;
   background-image: url(IMG/planta_paulista.png);
   background-size: cover;
   margin: 1.5% auto;
-}
-
-.texto-oficial{
-  margin-top: 2.5%
 }
 
 .texto-oficial p {
