--- a/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
+++ b/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
@@ -265,3 +265,139 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+
+
+
+
+/* ============================================================================ */
+
+.filtros {
+  width: 1200px;
+  position: absolute;
+  }
+  
+  
+  .roll {
+  width: 500px;
+  margin-left: 5%;
+  
+  }
+  
+  
+  *,
+  *:before,
+  *:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  }
+  
+  .wrapper {
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+  }
+  .container1 {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  margin-top: 30px;
+  background-color: #c4c4c4;
+  border-radius: 20px;
+  padding-left: 10%;
+  
+  }
+  input[type="range"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 80%;
+  outline: none;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  background-color: transparent;
+  pointer-events: none;
+  }
+  .slider-track {
+  width: 80%;
+  height: 5px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  border-radius: 5px;
+  }
+  input[type="range"]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  height: 5px;
+  }
+  input[type="range"]::-moz-range-track {
+  -moz-appearance: none;
+  height: 5px;
+  }
+  input[type="range"]::-ms-track {
+  appearance: none;
+  height: 5px;
+  }
+  input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 1.7em;
+  width: 1.7em;
+  background-color: #1D314D;
+  cursor: pointer;
+  margin-top: -9px;
+  pointer-events: auto;
+  border-radius: 50%;
+  }
+  input[type="range"]::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 1.7em;
+  width: 1.7em;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #1D314D;
+  pointer-events: auto;
+  border: none;
+  }
+  input[type="range"]::-ms-thumb {
+  appearance: none;
+  height: 1.7em;
+  width: 1.7em;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: #1D314D;
+  pointer-events: auto;
+  }
+  input[type="range"]:active::-webkit-slider-thumb {
+  background-color: #ffffff;
+  border: 1px solid #1D314D;
+  }
+  .values {
+  background-color: #1D314D;
+  width: 50%;
+  position: relative;
+  margin: auto;
+  padding: 10px 0;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 25px;
+  color: #ffffff;
+  }
+  .values:before {
+  content: "";
+  position: absolute;
+  height: 0;
+  width: 0;
+  border-top: 15px solid #1D314D;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  margin: auto;
+  bottom: -14px;
+  left: 0;
+  right: 0;
+  }
