--- a/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
+++ b/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
@@ -17,7 +17,7 @@
 
 #itens-laterais {
   background-color: #374962;
-  color: #FFF;
+  color: #fff;
   display: block;
   float: left;
   flex-direction: column;
@@ -31,6 +31,7 @@
 .listaItens {
   list-style: none;
   justify-content: space-around;
+  padding: 0;
 }
 
 .listaItens li {
@@ -40,23 +41,39 @@
 
 .listaItens a {
   text-decoration: none;
-  color: #EBEBEB;
+  color: #ebebeb;
 }
 
 .fotoPerfil {
   display: flex;
   margin: 30px;
+  justify-content: center;
 }
 
 .fotoPerfil img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-left: 12%;
 }
 
 .box-title {
   margin: 2% 0 0 2%;
+}
+
+.box-title h2,
+.box-title h6 {
+  margin-top: 0px;
+  color: #1d314d;
+}
+
+.box-title h2 {
+  margin-bottom: 0px;
+  font-size: 40px;
+}
+
+.box-title h6 {
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .conteudo {
@@ -64,77 +81,13 @@
   width: 100vw;
 }
 
-.conteudo h1 {
-  font-family: League-Spartan;
-  font-size: 32px;
-  font-weight: bold;
-  color: #1D314D;
-  text-align: center;
-  margin-left: -12%;
-}
-
-/*---------------------------------- Dados da Dashboard ---------------------------------*/
-.main_conteudo .container {
-  width: 60%;
-  height: 25%;
-  margin: 1% 0 0 20%;
-  justify-content: center;
-}
-
-.dataGroup {
-  width: 80%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.dataBox {
-  width: 30%;
-  height: 95%;
-  border: 2px solid #000;
-  border-radius: 10px;
-}
-
-.textBox {
-  width: 100%;
-  height: 25%;
-  background-color: #1D314D;
-  border-bottom: 2px solid #000;
-  border-radius: 5px 5px 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.textBox span {
-  color: #FFF;
-  font-family: Roboto;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.data {
-  margin-top: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.data span {
-  text-align: center;
-  color: #1D314D;
-  font-family: Roboto-Black;
-  font-size: 32px;
-}
-
 .conteudo select {
-  margin: 0.5% 0 0 5%;
-  height: 20%;
-  background-color: #1D314D;
+  margin: 0.5% 0 0 2%;
+  height: 35px;
+  background-color: #1d314d;
   border: none;
   border-radius: 10px;
-  color: #FFF;
+  color: #fff;
   font-family: Roboto-Black;
   font-size: 16px;
   text-align: center;
@@ -147,26 +100,82 @@
   cursor: pointer;
 }
 
-.box-title h2,
-.box-title h6 {
-  margin-top: 0px;
-  color: #1D314D;
+.conteudo h1 {
+  font-family: League-Spartan;
+  font-size: 32px;
+  font-weight: bold;
+  color: #1d314d;
+  text-align: center;
 }
 
-.box-title h2 {
-  margin-bottom: 0px;
-  font-size: 35px;
+/*---------------------------------- Dados da Dashboard ---------------------------------*/
+
+.main_conteudo .container {
+  width: 650px;
+  height: 25%;
+  justify-self: center;
+  justify-content: center;
+}
+
+.dataGroup {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dataBox {
+  width: 180px;
+  height: 95%;
+  border: 2px solid #000;
+  border-radius: 10px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.textBox {
+  width: 100%;
+  height: 25%;
+  background-color: #1d314d;
+  border-bottom: 2px solid #000;
+  border-radius: 5px 5px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textBox span {
+  color: #fff;
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.data {
+  margin-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.data span {
+  text-align: center;
+  color: #1d314d;
+  font-family: Roboto-Black;
+  font-size: 32px;
 }
 
 /*---------------------------------------- Legenda ----------------------------------------*/
+
 .legenda {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  margin: 3.5% 0% 0% 23.5%;
-  width: 35%;
-  height: 30%;
-  border: 2px solid #1D314D;
+  justify-content: space-around;
+  margin: 30px auto;
+  padding: 10px;
+  width: 600px;
+  height: 100px;
+  border: 2px solid #1d314d;
   border-radius: 10px;
 }
 
@@ -174,7 +183,7 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  width: 45%;
+  width: 35%;
 }
 
 .legenda .bloco .group {
@@ -185,50 +194,32 @@
   justify-content: space-around;
 }
 
+.legenda .bloco p {
+  font-family: Roboto-Black;
+  font-size: 16px;
+  margin: 0;
+}
+
 .legenda .bloco .quadrado {
   width: 15px;
   height: 15px;
   border: 2px solid #000;
 }
 
-.legenda .bloco .group #quad1 {
-  background-color: #FF3131;
-}
-
-.legenda .bloco .group #quad2 {
-  background-color: #FF914D;
-}
-
-.legenda .bloco .group #quad3 {
-  background-color: #FFDE59;
-}
-
-.legenda .bloco .group #quad4 {
-  background-color: #C2E806;
-}
-
-.legenda .bloco .group #quad5 {
-  background-color: #4EE888;
-}
-
-.legenda .bloco .group #quad6 {
-  background-color: #41BB4D;
-}
-
 .ver_mais {
-  background-color: #1D314D;
+  background-color: #1d314d;
   border-radius: 18px;
   border: none;
   font-family: Roboto;
   height: 40px;
   width: 130px;
   font-size: 17px;
-  margin: 0 0 0 68%;
+  margin: 0 0 0 75%;
 }
 
 .ver_mais a {
   text-decoration: none;
-  color: #FFF;
+  color: #fff;
 }
 
 .ver_mais:hover {
@@ -236,26 +227,222 @@
   cursor: pointer;
 }
 
-/*---------------------------------- Heatmap ---------------------------------*/
-#select_estacao {
-  width: 10%;
-  height: 5%;
-  margin: 0 0 0 1.5%;
+/*---------------------------------- Gráficos ---------------------------------*/
+
+.linha{
+  font-size: 30px;
+  font-style: inherit;
+  font: bold;
+  display: flex;
+  margin: 0 0 0% 42%;
+  align-items: center;
+  text-align: center;
+}
+.box-juncao{
+  margin-left: 0% ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
 }
 
-.heatmap {  
-  width: 600px;
-  height: 346px;
+.juncao{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.juncao .linha{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: start;
+  flex-direction: column;
+  width: 10px;
+  height: 10px;
+  margin: 0 0 0 20%;
+}
+
+/* Manipulando a Box onde estão os radio buttons de cada Estação */
+
+.box-linha{
+  background-color: yellow;
+  width: 700px;
+  height: 20px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-left: 0;
+}
+.box-estacoes{
+  white-space: nowrap;
+  overflow-x: auto;
+  display:flex;
+  justify-content: left;
+  background-color: #ffffff;
+  height: 200px;
+  width: 700px;
+  justify-content: space-evenly;
+  overflow-x: hidden;
+  margin-left: 8%;
+}
+.box-estacoes p{
+  writing-mode: vertical-rl;
+  transform: rotate(205deg);
+  white-space: nowrap;
+  display: inline-block;
+  text-align: start;
+  margin: 0% 0 0 3%;
+  justify-content: space-evenly;
+  
+}
+
+/* Editando o Container onde estão os Botões para exibir os dos graficos */
+
+.container_switch{
+    width: 700px;
+    height: 155px;
+    margin: 20px 0 0 0;
+    background-color: lightgrey;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: top;
+}
+.box-grafico{
+    width: 180px;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #374962;
+    text-align: center;
+    color:white;
+    display: flex;  
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+  .box-grafINTERNO{
+    width: 180px;
+    height: 60%;
+    border-radius: 10px;
+    background-color: #1D314D;
+    text-align: center;
+    color:white;
+    display: flex;  
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  /* Definindo o design das CheckBox */ 
+
+  .switch {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+  .switch .switch-wrapper {
+    display: flex;
+    width: 60px;
+    height: 34px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .switch .switch-wrapper {
+    top: 0%;
+    left: 2%;
+    right: 20%;
+    bottom: 20;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 40px;
+    background-color: #1D314D;
+  }
+  
+  .switch .switch-wrapper input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .switch .switch-wrapper .switch-button::before {
+    content: "";
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    left: 4px;
+    bottom: 4px;
+    border-radius: 50%;
+    transition: .4s all ease;
+    background-color: #FFFFFF;
+  }
+  
+  .switch .switch-wrapper input:checked + .switch-button::before {
+    background-color: chartreuse;
+  }
+  
+  .switch .switch-wrapper input:checked + .switch-button::before {
+    transform: translate(26px);
+  }
+  
+  /* Estilização específica para a checkbox customizada */
+  .butBotaoGraf {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
+  }
+
+  /* Editando o posicionamnedo dos graficos (IMAGENS) no site */
+
+  .Box_ExibirGrafs{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    width: auto;
+    height: auto;
+  }
+
+/*---------------------------------- Heatmap ---------------------------------*/
+
+.filtros {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 120px;
+}
+
+#select_estacao {
+  width: 10%;
+}
+
+.heatmap {
+  margin-top: 30px;
+  width: 850px;
+  height: 490px;
   background-image: url(IMG/planta_paulista.png);
   background-size: cover;
-  margin: 1.5% auto;
+  align-self: center;
 }
 
 .texto-oficial p {
-  color:#1D314D;
+  color: #1d314d;
   font-family: Roboto;
   font-weight: bold;
   text-align: center;
+  font-size: 20px;
 }
 
 #dataHeatmap .container {
@@ -266,84 +453,55 @@
   justify-content: flex-start;
 }
 
-
-
-
-
-/* ============================================================================ */
-
-.filtros {
-  width: 1200px;
-  position: absolute;
-  }
-  
-  
-  .roll {
-  width: 500px;
-  margin-left: 5%;
-  
-  }
-  
-  
-  *,
-  *:before,
-  *:after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  }
-  
-  .wrapper {
-  position: relative;
-  width: 100%;
-  border-radius: 10px;
-  }
-  .container1 {
-  position: relative;
-  width: 100%;
+/*---------------------------------- Slider ---------------------------------*/
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 35%; 
   height: 100px;
-  margin-top: 30px;
-  background-color: #c4c4c4;
-  border-radius: 20px;
-  padding-left: 10%;
-  
-  }
-  input[type="range"] {
+  border-radius: 10px;
+  align-items: center;
+  margin: 0.5% 0 0 300px;
+}
+.wrapper .sliderContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 80%;
+  height: 30px;
+  margin-top: 20px;
+}
+input[type="range"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 80%;
+  width: 100%;
   outline: none;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
+  position: absolute;   
   background-color: transparent;
   pointer-events: none;
-  }
-  .slider-track {
-  width: 80%;
+}
+.slider-track {
+  width: 100%;
   height: 5px;
   position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
   border-radius: 5px;
-  }
-  input[type="range"]::-webkit-slider-runnable-track {
+}
+input[type="range"]::-webkit-slider-runnable-track {
   -webkit-appearance: none;
   height: 5px;
-  }
-  input[type="range"]::-moz-range-track {
+}
+input[type="range"]::-moz-range-track {
   -moz-appearance: none;
   height: 5px;
-  }
-  input[type="range"]::-ms-track {
+}
+input[type="range"]::-ms-track {
   appearance: none;
   height: 5px;
-  }
-  input[type="range"]::-webkit-slider-thumb {
+}
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 1.7em;
   width: 1.7em;
@@ -352,8 +510,8 @@
   margin-top: -9px;
   pointer-events: auto;
   border-radius: 50%;
-  }
-  input[type="range"]::-moz-range-thumb {
+}
+input[type="range"]::-moz-range-thumb {
   -webkit-appearance: none;
   height: 1.7em;
   width: 1.7em;
@@ -362,8 +520,8 @@
   background-color: #1D314D;
   pointer-events: auto;
   border: none;
-  }
-  input[type="range"]::-ms-thumb {
+}
+input[type="range"]::-ms-thumb {
   appearance: none;
   height: 1.7em;
   width: 1.7em;
@@ -371,24 +529,28 @@
   border-radius: 50%;
   background-color: #1D314D;
   pointer-events: auto;
-  }
-  input[type="range"]:active::-webkit-slider-thumb {
-  background-color: #ffffff;
+}
+input[type="range"]:active::-webkit-slider-thumb {
+  background-color: #FFF;
   border: 1px solid #1D314D;
-  }
-  .values {
+}
+.values {
   background-color: #1D314D;
-  width: 50%;
+  width: 150px;
+  height: 10px;
   position: relative;
   margin: auto;
-  padding: 10px 0;
-  border-radius: 5px;
+  padding: 15px 0;
+  border-radius: 10px;
   text-align: center;
-  font-weight: 500;
-  font-size: 25px;
-  color: #ffffff;
-  }
-  .values:before {
+  font-weight: bold;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+}
+.values:before {
   content: "";
   position: absolute;
   height: 0;
@@ -400,4 +562,4 @@
   bottom: -14px;
   left: 0;
   right: 0;
-  }
+}
