--- a/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
+++ b/Sprint3/Site/web-data-viz/public/CSS/styleDashboard.css
@@ -104,8 +104,10 @@
   font-family: League-Spartan;
   font-size: 32px;
   font-weight: bold;
-  color: #1d314d;
+  color: #ffffff;
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 /*---------------------------------- Dados da Dashboard ---------------------------------*/
@@ -566,12 +568,14 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 /*---------------------------------- Ajuda ---------------------------------*/
 
+
 .box_helps {
-  margin: 2% 0 0 2%;
+  margin: 0% 7% 0 0%;
   display: flex;
   width: 91%;
   align-items: center;
   justify-content: center;
+  
 }
 
 .box_helps h2,
@@ -600,6 +604,8 @@ input[type="range"]:active::-webkit-slider-thumb {
   align-items: center;
   background-color: #cccccc;
   margin-bottom: 10%;
+  box-shadow: 0 10px 10px rgba(0, 5, 0, 5);
+  margin-bottom: 60px;
 }
 
 .box_helps a{
@@ -615,6 +621,8 @@ input[type="range"]:active::-webkit-slider-thumb {
   justify-content: center;
   align-items: center;
   background-color: #cccccc;
+  box-shadow: 0 10px 10px rgba(0, 5, 0, 5);
+  margin-bottom: 60px;
 }
 
 .box_ia{
@@ -626,9 +634,9 @@ input[type="range"]:active::-webkit-slider-thumb {
   justify-content: center;
   align-items: center;
   background-color: #cccccc;
-
+  box-shadow: 0 10px 10px rgba(0, 5, 0, 5);
   margin-left: 20%;
-  margin-bottom: 10%;
+  margin-bottom: 60px;
 }
 
 .box_doc{
@@ -640,7 +648,23 @@ input[type="range"]:active::-webkit-slider-thumb {
   justify-content: center;
   align-items: center;
   background-color: #cccccc;
-
+  box-shadow: 0 10px 10px rgba(0, 5, 0, 5);
   margin-left: 20%;
+  margin-bottom: 60px;
 }
 
+.box_fundo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #374962;
+  margin-top: 4%;
+  height: 400px;
+  width: 700px;
+  margin-left: 24%;
+  border-radius: 20px;
+  border-style: solid;
+  border-color: #000;
+  box-shadow: 0 10px 10px rgba(0, 5, 0, 5);
+}
